Bug 151053 - Body text not visible in Notes view of Content with dark background
Summary: Body text not visible in Notes view of Content with dark background
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.4.7.2 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.5.0 target:7.4.3
Keywords: bibisected, bisected
Depends on:
Blocks:
 
Reported: 2022-09-19 09:50 UTC by dhina
Modified: 2022-10-06 10:35 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Normal view: all good (1.34 MB, image/png)
2022-09-19 09:51 UTC, dhina
Details
Notes View: body text disappears (917.47 KB, image/png)
2022-09-19 09:52 UTC, dhina
Details
Normal view: all good, i.e. body text is visible (885.07 KB, image/png)
2022-09-19 09:54 UTC, dhina
Details

Note You need to log in before you can comment on or make changes to this bug.
Description dhina 2022-09-19 09:50:48 UTC
Description:
If a dark background, the body text disappears in View>Note (but not in the title box). It is very annoying when using this "Notes" view because you cannot see what you have written in the slide.

Same in safe mode.

See screen captures

Steps to Reproduce:
1.  Open a new presentation
2. Choose the portfolio template (dark background)
3. Go to slide #2
4. Write something in the title box with the default color (white)
5. WRite something in the body-text box  with the default color (white)
6. View > Notes

Actual Results:
You can see what was written in the title, but not in the body-text box

Expected Results:
You should see what you have written in the body-text box


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Version: 7.4.1.2 / LibreOffice Community
Build ID: 3c58a8f3a960df8bc8fd77b461821e42c061c5f0
CPU threads: 8; OS: Mac OS X 10.15.7; UI render: default; VCL: osx
Locale: en-US (en_FR.UTF-8); UI: en-US
Calc: threaded
Comment 1 dhina 2022-09-19 09:51:48 UTC
Created attachment 182546 [details]
Normal view: all good
Comment 2 dhina 2022-09-19 09:52:51 UTC
Created attachment 182547 [details]
Notes View: body text disappears
Comment 3 dhina 2022-09-19 09:54:15 UTC
Created attachment 182548 [details]
Normal view: all good, i.e. body text is visible
Comment 4 raal 2022-09-24 10:39:22 UTC
Confirm with Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 90861cc6f815b3f34edb88d47afed0d1099e72e7
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded

and Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)
Comment 5 Timur 2022-09-26 09:24:59 UTC
I see this already in OO (and in 4.1) for both Title and Content slide with dark slide background. 
Then it was all OK in 5.0 and 5.3. 
Later from 5.4 Title slide is OK and Content body NOK as reported, regression.
Comment 6 Timur 2022-09-26 09:27:29 UTC Comment hidden (obsolete)
Comment 7 Timur 2022-09-26 10:01:04 UTC
I cannot reproduce as OK again (I tested differently or I just made a mistake). 
I just see an incomplete fix/improvement in 4.3 that fixed Title but not Content. 

author	Caolán McNamara <caolanm@redhat.com>	2014-01-10 
commit 76a0b3170664b19c3eb66edc8fccb04dc5485387
Resolves: fdo#35779 set the bg color of the editeng from the text shape

CC Caolán please see this. 

Another issue with Notes is Options-App colors-Dark Scheme, that can be reported separately, if not dealt here.
Comment 8 Caolán McNamara 2022-10-05 19:24:54 UTC
The bisect isn't to the introduction of the bug, but to the commit that fixed a similar case. That threw me for a minute.
Comment 9 Caolán McNamara 2022-10-05 19:29:10 UTC
https://gerrit.libreoffice.org/c/core/+/140995 seems to do the right thing
Comment 10 Commit Notification 2022-10-06 07:54:39 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f8983580f67b06461b23fa34dd1bfdefbb33012a

Resolves: tdf#151053 Body text with dark bg not visible in Notes view

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Caolán McNamara 2022-10-06 08:40:30 UTC
done in trunk, backport to 7-4 in gerrit
Comment 12 Commit Notification 2022-10-06 10:35:48 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/628e84cff5cd685ed242c8ebb32c88e63d16c57a

Resolves: tdf#151053 Body text with dark bg not visible in Notes view

It will be available in 7.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.