Resolves: tdf#151053 Body text with dark bg not visible in Notes view

this is a similar case to:

commit 76a0b3170664b19c3eb66edc8fccb04dc5485387
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Fri Jan 10 16:49:19 2014 +0000

    Resolves: fdo#35779 set the bg color of the editeng from the text shape

Change-Id: Ib7ca42426397346e5d7473b93e60f853e646a423
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140995
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>